--- a/Dealership-AuthorSolution/Dealership/packages.config
+++ b/Dealership-AuthorSolution/Dealership/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.2.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.3.0" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.3.0" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.3.0" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net452" />
