--- a/Dealership-AuthorSolution/Dealership.Data.MongoDb/Dealership.Data.MongoDb.csproj
+++ b/Dealership-AuthorSolution/Dealership.Data.MongoDb/Dealership.Data.MongoDb.csproj
@@ -56,9 +56,11 @@
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Motorcycle.cs" />
     <Compile Include="Models\Truck.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\MongoUser.cs" />
     <Compile Include="Models\Vehicle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\MongoGenericRepository.cs" />
+    <Compile Include="Services\MongoDbUserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dealership.Data.Common\Dealership.Data.Common.csproj">
