--- a/Dealership-AuthorSolution/Dealership/Dealership.csproj
+++ b/Dealership-AuthorSolution/Dealership/Dealership.csproj
@@ -112,6 +112,10 @@
       <Project>{0D1F1964-D268-472E-8B50-F06CDD3BD8A6}</Project>
       <Name>Dealership.Data.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Dealership.Data.MongoDb\Dealership.Data.MongoDb.csproj">
+      <Project>{4F3D4CAA-9CDF-4CC8-BD32-1CCAA11BC0B4}</Project>
+      <Name>Dealership.Data.MongoDb</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Dealership.Data\Dealership.Data.csproj">
       <Project>{2C672116-990D-4FF5-8DF9-EAC6A32193F5}</Project>
       <Name>Dealership.Data</Name>
