--- a/Dealership-AuthorSolution/Dealership.Data.MongoDb/Dealership.Data.MongoDb.csproj
+++ b/Dealership-AuthorSolution/Dealership.Data.MongoDb/Dealership.Data.MongoDb.csproj
@@ -52,12 +52,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Car.cs" />
+    <Compile Include="IMongoDbId.cs" />
+    <Compile Include="Models\MongoCar.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Motorcycle.cs" />
     <Compile Include="Models\Truck.cs" />
     <Compile Include="Models\MongoUser.cs" />
-    <Compile Include="Models\Vehicle.cs" />
+    <Compile Include="Models\MongoVehicle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\MongoGenericRepository.cs" />
     <Compile Include="Services\MongoDbUserService.cs" />
