--- a/Dealership-AuthorSolution/Dealership.Data.MongoDb/Dealership.Data.MongoDb.csproj
+++ b/Dealership-AuthorSolution/Dealership.Data.MongoDb/Dealership.Data.MongoDb.csproj
@@ -54,13 +54,13 @@
   <ItemGroup>
     <Compile Include="IMongoDbId.cs" />
     <Compile Include="Models\MongoCar.cs" />
-    <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\MongoComment.cs" />
     <Compile Include="Models\Motorcycle.cs" />
     <Compile Include="Models\Truck.cs" />
     <Compile Include="Models\MongoUser.cs" />
     <Compile Include="Models\MongoVehicle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\MongoGenericRepository.cs" />
+    <Compile Include="Repository\MongoUserRepository.cs" />
     <Compile Include="Services\MongoDbUserService.cs" />
   </ItemGroup>
   <ItemGroup>
